--- a/mods/sovra/rules/vehicles.yaml
+++ b/mods/sovra/rules/vehicles.yaml
@@ -6,7 +6,7 @@ V2RL:
 		Queue: Vehicle
 		BuildPaletteOrder: 230
 		Prerequisites: dome, ~vehicles.soviet, ~techlevel.medium
-		Description: Long-range rocket artillery.\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
+		Description: Long-range rocket artillery.\n\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 900
 	Tooltip:
@@ -59,7 +59,7 @@ V2RL:
 		Queue: Vehicle
 		BuildPaletteOrder: 130
 		Prerequisites: weap, ~vehicles.allies, ~techlevel.low
-		Description: Fast tank, good for scouting.\n  Strong vs Light armor\n  Weak vs Infantry, Tanks, Aircraft
+		Description: Fast tank, good for scouting.\n\n  Strong vs Light armor\n  Weak vs Infantry, Tanks, Aircraft
 	Valued:
 		Cost: 700
 	Tooltip:
@@ -104,7 +104,7 @@ V2RL:
 		Queue: Vehicle
 		BuildPaletteOrder: 220
 		Prerequisites: fix, ~vehicles.allies, ~techlevel.medium
-		Description: Allied Main Battle Tank.\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
+		Description: Allied Main Battle Tank.\n\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
 	Valued:
 		Cost: 850
 	Tooltip:
@@ -153,7 +153,7 @@ V2RL:
 		Queue: Vehicle
 		BuildPaletteOrder: 220
 		Prerequisites: fix, ~vehicles.soviet, ~techlevel.medium
-		Description: Soviet Main Battle Tank, with dual cannons\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
+		Description: Soviet Main Battle Tank, with dual cannons\n\n  Strong vs Vehicles\n  Weak vs Infantry, Aircraft
 	Valued:
 		Cost: 1150
 	Tooltip:
@@ -216,7 +216,7 @@ V2RL:
 		Queue: Vehicle
 		BuildPaletteOrder: 320
 		Prerequisites: stek, ~vehicles.soviet, ~techlevel.high
-		Description: Big and slow tank, with anti-air capability.\nCan crush concrete walls.\n  Strong vs Vehicles, Infantry, Aircraft\n  Weak vs Nothing
+		Description: Big and slow tank, with anti-air capability.\nCan crush concrete walls.\n\n  Strong vs Vehicles, Infantry, Aircraft\n  Weak vs Nothing
 	Valued:
 		Cost: 2000
 	Tooltip:
@@ -278,7 +278,7 @@ ARTY:
 		Queue: Vehicle
 		BuildPaletteOrder: 230
 		Prerequisites: dome, ~vehicles.allies, ~techlevel.medium
-		Description: Long-range artillery.\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
+		Description: Long-range artillery.\n\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 850
 	Tooltip:
@@ -325,7 +325,7 @@ HARV:
 		Queue: Vehicle
 		BuildPaletteOrder: 110
 		Prerequisites: proc, ~techlevel.infonly
-		Description: Collects Ore and Gems for processing.\n  Unarmed
+		Description: Collects Ore and Gems for processing.\n\n  Unarmed
 	Valued:
 		Cost: 1100
 	Tooltip:
@@ -387,7 +387,7 @@ MCV:
 		BuildPaletteOrder: 210
 		Prerequisites: fix, ~techlevel.medium
 		BuildDurationModifier: 50
-		Description: Deploys into another Construction Yard.\n  Unarmed
+		Description: Deploys into another Construction Yard.\n\n  Unarmed
 	Valued:
 		Cost: 2000
 	Tooltip:
@@ -427,7 +427,7 @@ JEEP:
 		Queue: Vehicle
 		BuildPaletteOrder: 120
 		Prerequisites: weap, ~vehicles.allies, ~techlevel.low
-		Description: Fast scout & anti-infantry vehicle.\nCan carry one infantry.\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft
+		Description: Fast scout & anti-infantry vehicle.\nCan carry one infantry.\n\n  Strong vs Infantry\n  Weak vs Vehicles, Aircraft
 	Valued:
 		Cost: 500
 	Tooltip:
@@ -477,7 +477,7 @@ APC:
 		Queue: Vehicle
 		BuildPaletteOrder: 130
 		Prerequisites: barracks, ~techlevel.low
-		Description: Tough infantry transport.\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
+		Description: Tough infantry transport.\n\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 850
 	Tooltip:
@@ -521,7 +521,7 @@ MNLY:
 		Queue: Vehicle
 		BuildPaletteOrder: 310
 		Prerequisites: fix, ~techlevel.medium
-		Description: Lays mines to destroy\nunwary enemy units.\nCan detect mines.\n  Unarmed
+		Description: Lays mines to destroy\nunwary enemy units.\nCan detect mines.\n\n  Unarmed
 	Valued:
 		Cost: 800
 	Tooltip:
@@ -572,7 +572,7 @@ TRUK:
 		Queue: Vehicle
 		BuildPaletteOrder: 410
 		Prerequisites: proc, ~techlevel.low
-		Description: Transports cash to other players.\n  Unarmed
+		Description: Transports cash to other players.\n\n  Unarmed
 	Valued:
 		Cost: 500
 	Tooltip:
@@ -598,7 +598,7 @@ MGG:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
 		Prerequisites: atek, ~vehicles.allies, ~techlevel.high
-		Description: Regenerates the shroud nearby, \nobscuring the area.\n  Unarmed
+		Description: Regenerates the shroud nearby, \nobscuring the area.\n\n  Unarmed
 	Valued:
 		Cost: 1000
 	Tooltip:
@@ -638,7 +638,7 @@ MRJ:
 		Queue: Vehicle
 		BuildPaletteOrder: 320
 		Prerequisites: dome, ~vehicles.england, ~techlevel.medium
-		Description: Jams nearby enemy radar domes\nand deflects incoming missiles.\n  Unarmed
+		Description: Jams nearby enemy radar domes\nand deflects incoming missiles.\n\n  Unarmed
 	Health:
 		HP: 22000
 	Armor:
@@ -671,7 +671,7 @@ TTNK:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
 		Prerequisites: stek, ~vehicles.russia, ~techlevel.high
-		Description: Tank with mounted Tesla coil.\n  Strong vs Infantry, Vehicles, Buildings\n  Weak vs Aircraft
+		Description: Tank with mounted Tesla coil.\n\n  Strong vs Infantry, Vehicles, Buildings\n  Weak vs Aircraft
 	Valued:
 		Cost: 1350
 	Tooltip:
@@ -714,7 +714,7 @@ FTRK:
 		Queue: Vehicle
 		BuildPaletteOrder: 120
 		Prerequisites: weap, ~vehicles.soviet, ~techlevel.low
-		Description: Mobile unit with mounted Flak cannon.\n  Strong vs Infantry, Light armor, Aircraft\n  Weak vs Tanks
+		Description: Mobile unit with mounted Flak cannon.\n\n  Strong vs Infantry, Light armor, Aircraft\n  Weak vs Tanks
 	Valued:
 		Cost: 600
 	Tooltip:
@@ -809,7 +809,7 @@ CTNK:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
 		Prerequisites: atek, ~vehicles.germany, ~techlevel.high
-		Description: Armed with anti-ground missiles.\nTeleports to areas within range.\n  Strong vs Vehicles, Buildings\n  Weak vs Infantry, Aircraft\n  Special ability: Can teleport
+		Description: Armed with anti-ground missiles.\nTeleports to areas within range.\n\n  Strong vs Vehicles, Buildings\n  Weak vs Infantry, Aircraft\n  Special ability: Can teleport
 	Valued:
 		Cost: 1350
 	Tooltip:
@@ -856,7 +856,7 @@ QTNK:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
 		Prerequisites: stek, ~vehicles.belarus, ~techlevel.high
-		Description: Deals seismic damage to nearby vehicles\nand structures.\n  Strong vs Vehicles, Buildings\n  Weak vs Infantry, Aircraft
+		Description: Deals seismic damage to nearby vehicles\nand structures.\n\n  Strong vs Vehicles, Buildings\n  Weak vs Infantry, Aircraft
 	Valued:
 		Cost: 2000
 	Tooltip:
@@ -899,7 +899,7 @@ STNK:
 		Queue: Vehicle
 		BuildPaletteOrder: 330
 		Prerequisites: atek, ~vehicles.france, ~techlevel.high
-		Description: Lightly armored infantry transport which\ncan cloak. Armed with anti-ground missiles.\n  Strong vs Light armor\n  Weak vs Infantry, Tanks, Aircraft
+		Description: Lightly armored infantry transport which\ncan cloak. Armed with anti-ground missiles.\n\n  Strong vs Light armor\n  Weak vs Infantry, Tanks, Aircraft
 	Valued:
 		Cost: 1000
 	Tooltip:
