--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -235,7 +235,7 @@ E4:
 	Buildable:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
-		BuildPaletteOrder: 110
+		BuildPaletteOrder: 140
 		Prerequisites: ~barr, stek, ~techlevel.high
 		Description: Advanced anti-structure unit.\n\n  Strong vs Infantry, Buildings\n  Weak vs Vehicles, Aircraft
 	Valued:
@@ -470,7 +470,7 @@ MEDI:
 	Health:
 		HP: 6000
 	Mobile:
-		Speed: 49
+		Speed: 48
 	RevealsShroud:
 		Range: 3c0
 	Passenger:
@@ -513,7 +513,7 @@ MECH:
 	Health:
 		HP: 8000
 	Mobile:
-		Speed: 49
+		Speed: 48
 		Voice: Move
 	RevealsShroud:
 		Range: 3c0
@@ -676,7 +676,7 @@ SHOK:
 	Buildable:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
-		BuildPaletteOrder: 130
+		BuildPaletteOrder: 150
 		Prerequisites: ~barr, stek, ~infantry.russia, ~techlevel.high
 		Description: Elite infantry with portable Tesla coils.\n\n  Strong vs Infantry, Vehicles\n  Weak vs Aircraft
 	Valued:
@@ -850,3 +850,71 @@ WarriorAnt:
 		Prerequisites: ~disabled
 	RenderSprites:
 		Image: Ant
+
+VOLK:
+	Inherits: ^Soldier
+	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
+    -Crushable:
+    -EdibleByLeap:
+	Valued:
+		Cost: 1200
+	Tooltip:
+		Name: Volkov
+	UpdatesPlayerStatistics:
+		AddToArmyValue: true
+	Buildable:
+		BuildPaletteOrder: 130
+		Prerequisites: stek, ~infantry.soviet, ~techlevel.high
+		BuildLimit: 1
+		Queue: Infantry
+		Description: Maximum 1 can be built.\n\nElite cyborg prototype. Armed with\nantimaterial rifle and C4.\n\nStrong vs Infantry, Vehicles, Buildings.\nWeak vs Aircraft.\n\n  Special Ability: Destroy Building with C4
+	Mobile:
+		Voice: Move
+	Health:
+		HP: 15000
+	Armor:
+		Type: Heavy
+	RevealsShroud:
+		Range: 6c0
+	AutoTarget:
+		ScanRadius: 8
+	Guard:
+		Voice: Action
+	Demolition:
+		DetonationDelay: 45
+		Voice: Demolish
+	Passenger:
+		CustomPipType: red
+		Voice: Move
+	Armament:
+		Weapon: VolkovGun
+		LocalOffset: 256,43,341
+        FireDelay: 5
+	Armament@GARRISONED:
+		Name: garrisoned
+		Weapon: VolkovGun
+		MuzzleSequence: garrison-muzzle
+	WithInfantryBody:
+		DefaultAttackSequence: shoot
+		IdleSequences: idle1
+		StandSequences: stand
+		RequiresCondition: !parachute
+	WithInfantryBody@PARACHUTE:
+		RequiresCondition: parachute
+		Palette: player-noshadow
+		IsPlayerPalette: true
+	ExternalCondition@PRODUCED:
+		Condition: produced
+	VoiceAnnouncement:
+		RequiresCondition: produced
+		Voice: Build
+	AnnounceOnKill:
+	Voiced:
+		VoiceSet: VolkovVoice
+	ProducibleWithLevel:
+		Prerequisites: barracks.upgraded
+	WithProductionIconOverlay:
+		Types: Veterancy
+		Prerequisites: barracks.upgraded
+    RenderSprites:
+        Image: GNRL
