tech tree adjustments
Radar Dome changed to require any Power Plant and Ore Refinery.
Soviet Tech Center can be built with either War Factory or Airfield and a Radar Dome.

--- a/mods/sovra/rules/fakes.yaml
+++ b/mods/sovra/rules/fakes.yaml
@@ -279,7 +279,7 @@ DOMF:
 	Buildable:
 		BuildPaletteOrder: 940
 		Queue: Defense
-		Prerequisites: proc, weap, ~structures.france, ~techlevel.medium
+		Prerequisites: anypower, proc, ~structures.france, ~techlevel.medium
 		Description: Looks like a Radar Dome.
 		Icon: fake-icon
 	Building:
