QOL: Siege unit range indicators
given all siege units a range circle when selected. those are the V2 Launcher, Artillery, Cruiser and Missile Submarine.

Bonus change:
properly linked AA and AG attacks on the Destroyer so that it cannot ignore attack cooldown when switching among air and ground targets.

--- a/mods/sovra/rules/ships.yaml
+++ b/mods/sovra/rules/ships.yaml
@@ -116,6 +116,7 @@ MSUB:
 		EmptyWeapon: UnitExplodeSubmarine
 	Selectable:
 		DecorationBounds: 1877, 1877
+	RenderRangeCircle:
 
 DD:
 	Inherits: ^Ship
@@ -152,6 +153,8 @@ DD:
 		Weapon: Stinger
 		LocalOffset: 0,-100,0, 0,100,0
 		LocalYaw: 64, -64
+		PauseOnCondition: reload-aa
+        ReloadingCondition: reload-ag
 	Armament@SECONDARY:
 		Weapon: DepthCharge
 		LocalOffset: 0,-100,0, 0,100,0
@@ -160,6 +163,8 @@ DD:
 		Weapon: StingerAA
 		LocalOffset: 0,-100,0, 0,100,0
 		LocalYaw: 64, -64
+		PauseOnCondition: reload-ag
+        ReloadingCondition: reload-aa
 	AttackTurreted:
 	WithSpriteTurret:
 	DetectCloaked:
@@ -231,6 +236,7 @@ CA:
 		Turret: secondary
 	Selectable:
 		DecorationBounds: 1877, 1877
+	RenderRangeCircle:
 
 LST:
 	Inherits: ^Ship
