--- a/mods/sovra/rules/aircraft.yaml
+++ b/mods/sovra/rules/aircraft.yaml
@@ -369,8 +369,8 @@ HIND:
 	Buildable:
 		Queue: Aircraft
 		BuildAtProductionType: Helicopter
-		BuildPaletteOrder: 20
-		Prerequisites: ~airproduction, dome, ~aircraft.soviet, ~techlevel.medium
+		BuildPaletteOrder: 70
+		Prerequisites: ~airproduction, stek, ~aircraft.soviet, ~techlevel.high
 		Description: Helicopter gunship armed\nwith dual chainguns.\n\n  Strong vs Infantry, Light armor\n  Weak vs Tanks, Aircraft
 	Valued:
 		Cost: 1500
