HPAD bib removal
removed the useless bib infront of the Helipad down below it.
the structure is now 2x2 instead 3x2.

--- a/mods/sovra/rules/fakes.yaml
+++ b/mods/sovra/rules/fakes.yaml
@@ -352,9 +352,9 @@ HPAF:
 		Description: Looks like a Helipad.
 		Icon: fake-icon
 	Building:
-		Footprint: xx xx ==
-		Dimensions: 2,3
-		LocalCenterOffset: 0,-512,0
+		Footprint: xx xx
+		Dimensions: 2,2
+		LocalCenterOffset: 0,-256,0
 	WithBuildingBib:
 	RenderSprites:
 		Image: HPAD
