Tanya uncrushable and dog-immune
made Tanya also uncrushable or one-shottable by dog. Volkov is already so.

--- a/mods/sovra/rules/infantry.yaml
+++ b/mods/sovra/rules/infantry.yaml
@@ -392,6 +392,8 @@ SPY:
 E7:
 	Inherits: ^Soldier
 	Inherits@AUTOTARGET: ^AutoTargetGroundAssaultMove
+    -Crushable:
+    -EdibleByLeap:
 	Buildable:
 		Queue: Infantry
 		BuildAtProductionType: Soldier
